--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,8 @@
     "i18next": "^23.7.6",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.263.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.7"
   },
