--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "primereact": "^10.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^13.5.0",
     "react-pdf": "^7.5.1",
     "react-router-dom": "^6.20.0",
